# rust_multi_json_benchmark

./: .gitignore  Cargo.toml  linux.sh
src/: json_generator.rs  lib.rs  main.rs
src/search_tree/: breadth_first_search.rs  depth_first_search.rs
src/test_json/: config.rs  excel_generator.rs  measurement.rs  measurement_types.rs  pc_usage_exporter.rs  reporter.rs  run_test_loop.rs
src/utils/: json_type.rs  math_data_collector.rs  randomizer.rs
