[package]
name = "rust_multi_json_benchmark"
version = "1.0.0"
edition = "2021"
default-run = "json_tester"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json_tester"
path = "src/main.rs"

[[bin]]
name = "json_generator"
path = "src/bin/json_generator.rs"

[[bin]]
name = "generate_excel"
path = "src/bin/generate_excel.rs"

[dependencies]
home = "0.5.4"
once_cell = "1.17.1"
rand = "0.8.5"
self-meter = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
tokio = { version = "1", features=["full"] }
xlsxwriter = "0.6.0"
